Sculpt : Brush Cursor too jittery even with Default Settings. #70715

Closed
opened 2019-10-10 22:21:28 +02:00 by Zino Guerr · 5 comments

System Information
Operating system: Windows-10-10.0.1709 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-10 16:30, hash: 91a26ee745
Worked: Older Builds.

Short description of error
Latest build of the Cursor Preview is too jittery even with defauly scene wasn't like this in yesterday build even when setting Normal Radius to 0.

Comparisson with old the Sculpt Branch and latest Master Build.
{F7803109 size = full}

Exact steps for others to reproduce the error
1 . New Sculpt Template.
2 . Load Factory settings.
3 . Move Cursor Preview around the Sphere.
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.1709 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-10 16:30, hash: `91a26ee745` Worked: Older Builds. **Short description of error** Latest build of the Cursor Preview is too jittery even with defauly scene wasn't like this in yesterday build even when setting Normal Radius to 0. Comparisson with old the Sculpt Branch and latest Master Build. {[F7803109](https://archive.blender.org/developer/F7803109/jit.gif) size = full} **Exact steps for others to reproduce the error** 1 . New Sculpt Template. 2 . Load Factory settings. 3 . Move Cursor Preview around the Sphere. [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G
Member

Added subscribers: @brecht, @PabloDobarro

Added subscribers: @brecht, @PabloDobarro
Member

@brecht This is related to the new TBB scheduler. If you the ##SCULPT_USE_OPENMP## flag check in ##sculpt_cursor_geometry_info_update## and then you disable multithreaded sculpt, it works fine. This is also affecting the area normal and center calculation during sculpting. I think we are missing something in the reduce functions. 2019-10-10 23-41-12.mp4

@brecht This is related to the new TBB scheduler. If you the ##SCULPT_USE_OPENMP## flag check in ##sculpt_cursor_geometry_info_update## and then you disable multithreaded sculpt, it works fine. This is also affecting the area normal and center calculation during sculpting. I think we are missing something in the reduce functions. [2019-10-10 23-41-12.mp4](https://archive.blender.org/developer/F7803405/2019-10-10_23-41-12.mp4)

This issue was referenced by 00b6f8ef90

This issue was referenced by 00b6f8ef9079b54ab128413e9fda3d1435a45083

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-11 01:28:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70715
No description provided.