Fix T70715: sculpt brush jitter after recent TBB changes

Fix error in the splitting constructor, and some refactoring.